<resources>
    <string name="app_name">Finding Nemo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="welcome_fragment">Welcome Fragment</string>
    <string name="icons_fragment_label">Icons Fragment</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="gameScreenText">This is the game screen.</string>
    <string name="game_over">GAME OVER</string>
    <string name="congrats_message">CONGRATULATIONS!</string>
    <string name="restart">RESTART</string>
    <string name="exit">EXIT</string>
</resources>