<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@android:color/holo_blue_dark">

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="233dp"
        android:layout_height="59dp"
        android:ems="10"
        android:hint="Enter Name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUsername"
        app:layout_constraintVertical_bias="0.2">

        <RadioButton
            android:id="@+id/easy_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/easy"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/medium_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/medium"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/hard_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hard"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </RadioGroup>

    <Button
        android:id="@+id/config_submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PLAY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SELECT YOUR CHARACTER"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <ImageButton
        android:id="@+id/turtle1Btn"
        android:layout_width="80dp"
        android:layout_height="57dp"
        android:layout_marginStart="48dp"
        android:background="@android:color/holo_blue_dark"
        android:contentDescription="turtle1"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/editUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/turtleofficial" />

    <ImageButton
        android:id="@+id/nemoBtn"
        android:layout_width="80dp"
        android:layout_height="57dp"
        android:background="@android:color/holo_blue_dark"
        android:contentDescription="Nemo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/editUsername"
        app:layout_constraintStart_toEndOf="@+id/turtle1Btn"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/nemo_icon" />

    <ImageButton
        android:id="@+id/doriBtn"
        android:layout_width="80dp"
        android:layout_height="57dp"
        android:background="@android:color/holo_blue_dark"
        android:contentDescription="Dory"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/editUsername"
        app:layout_constraintStart_toEndOf="@+id/nemoBtn"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/doripixel" />

    <ImageButton
        android:id="@+id/turtle2Btn"
        android:layout_width="80dp"
        android:layout_height="57dp"
        android:background="@android:color/holo_blue_dark"
        android:contentDescription="Turtle2"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/editUsername"
        app:layout_constraintStart_toEndOf="@+id/doriBtn"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/turtlenemo" />


</androidx.constraintlayout.widget.ConstraintLayout>